--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "npx serve -s build"
+    "serve": "npx serve -s build",
+    "deploy": "npm run build && scp -r ./build/* mrphysix@84.201.138.200:~/movies-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
